crates/oxicode-tui/src/app/snapshots/oxicode_tui__app__tests__tests__app_active_tool_running.snap
---
source: crates/oxicode-tui/src/app/tests.rs
assertion_line: 3331
expression: normalized_rendered_text(&terminal).as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  0s [ask]         "
"┌ Conversation ────────────────────────────────────────────────────────────────┐"
"│◆ Assistant                                                                   │"
"│  ⠙ Thinking... (0.0s)                                                        │"
"│  ⠙ bash(echo hello) (0.0s)                                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
