crates/oxicode-tui/src/app/snapshots/oxicode_tui__app__tests__tests__app_after_message_complete.snap
---
source: crates/oxicode-tui/src/app/tests.rs
expression: after_complete.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  0s [ask]         "
"┌ Conversation ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│   ██████╗ ██╗  ██╗██╗ ██████╗ ██████╗ ██████╗ ███████╗                       │"
"│  ██╔═══██╗╚██╗██╔╝██║██╔════╝██╔═══██╗██╔══██╗██╔════╝                       │"
"│  ██║   ██║ ╚███╔╝ ██║██║     ██║   ██║██║  ██║█████╗                         │"
"│  ██║   ██║ ██╔██╗ ██║██║     ██║   ██║██║  ██║██╔══╝                         │"
"│  ╚██████╔╝██╔╝ ██╗██║╚██████╗╚██████╔╝██████╔╝███████╗                       │"
"│   ╚═════╝ ╚═╝  ╚═╝╚═╝ ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝                       │"
"│                                                                              │"
"│  v0.1.0 • claude-sonnet-4-20250514 •                                         │"
"│                                                                              │"
"│  Enter  — send message    Ctrl+C  — interrupt/quit                           │"
"│  Tab    — toggle panel    /help   — commands                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  1: Explore codebase   2: Run tests   3: Find bugs                             "
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
