crates/oxicode-tui/src/app/snapshots/oxicode_tui__app__tests__tests__app_permission_dialog_overlay.snap
---
source: crates/oxicode-tui/src/app/tests.rs
assertion_line: 3173
expression: rendered.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  0s [ask]         "
"┌ Conversation ────────────────────────────────────────────────────────────────┐"
"│    ┌──────────────────────────── Allow bash ────────────────────────────┐    │"
"│   █│                                                                    │    │"
"│  ██│  Command:                                                          │    │"
"│  ██│  ┌──────────────────────────────────────────────────────────────┐  │    │"
"│  ██│  │ echo hello                                                      │    │"
"│  ╚█│  └──────────────────────────────────────────────────────────────┘  │    │"
"│   ╚│                                                                    │    │"
"│    │  ⚠ Command contains potentially destructive operations             │    │"
"│  v0│                                                                    │    │"
"│    │  ▸ [y] Allow once                                                  │    │"
"│  En│    [a] Allow for session                                           │    │"
"│  Ta│    [p] Allow prefix for session                                    │    │"
"│    │    [n] Deny                                                        │    │"
"│    │    [N] Always deny                                                 │    │"
"│    │                                                                    │    │"
"│    │  Auto-deny in 30s                                                  │    │"
"│    │  ↑↓ nav  Enter confirm  y/a/n/N  Esc deny                          │    │"
"│    └────────────────────────────────────────────────────────────────────┘    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
