crates/oxicode-tui/src/app/snapshots/oxicode_tui__app__tests__tests__app_scroll_manual_at_bottom.snap
---
source: crates/oxicode-tui/src/app/tests.rs
expression: rendered.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  0s [ask]         "
"┌ Conversation ────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│────────────────────────────────────────────────────────────                  │"
"│                                                                              │"
"│▏ ❯ You                                                                       │"
"│▏   Line 19                                                                   │"
"│                                                                              │"
"│◆ Assistant                                                                   │"
"│  Answer 19                                                                   │"
"│                                                                              │"
"│────────────────────────────────────────────────────────────                  │"
"│                                                                              │"
"│▏ ❯ You                                                                       │"
"│▏   Line 20                                                                   │"
"│                                                                              │"
"│◆ Assistant                                                                   │"
"│  Answer 20                                                                   │"
"│                                                                              │"
"│                                                                              █"
"└──────────────────────────────────────────────────────────────────────────────█"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
