crates/oxicode-tui/src/app/snapshots/oxicode_tui__app__tests__tests__app_scroll_to_bottom_auto.snap
---
source: crates/oxicode-tui/src/app/tests.rs
expression: rendered.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  0s [ask]         "
"┌ Conversation ────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│────────────────────────────────────────────────────────────                  │"
"│                                                                              │"
"│▏ ❯ You                                                                       │"
"│▏   Message number 29                                                         │"
"│                                                                              │"
"│◆ Assistant                                                                   │"
"│  Reply to message 29                                                         │"
"│                                                                              │"
"│────────────────────────────────────────────────────────────                  │"
"│                                                                              │"
"│▏ ❯ You                                                                       │"
"│▏   Message number 30                                                         │"
"│                                                                              │"
"│◆ Assistant                                                                   │"
"│  Reply to message 30                                                         │"
"│                                                                              │"
"│                                                                              █"
"└──────────────────────────────────────────────────────────────────────────────█"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
